[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/themes/test_button_hover_theme.tres" type="StyleBox" id=1]
[ext_resource path="res://assets/themes/test_button_normal_theme.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/backgrounds/screen_shading.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/overlays/pause/pause_menu.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/menu_options/options.png" type="Texture" id=5]
[ext_resource path="res://game/ui/buttons/MenuButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/fonts/ethnocentric rg.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://game/ui/menus/MenuTheme.tres" type="Theme" id=8]
[ext_resource path="res://game/ui/menus/OptionsMenu.gd" type="Script" id=9]
[ext_resource path="res://assets/sounds/sfx/enemies/shoot/03enemyshoot.wav" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=8]
size = 60
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=1]
size = 24
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/fonts/ethnocentric rg.ttf"

[sub_resource type="DynamicFont" id=3]
use_filter = true
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://assets/fonts/ethnocentric rg.ttf"

[sub_resource type="DynamicFont" id=5]
size = 110
outline_size = 4
outline_color = Color( 0.131149, 0.716458, 0.746094, 1 )
use_filter = true
extra_spacing_char = 3
font_data = SubResource( 4 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 1 )
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = ExtResource( 1 )
Button/styles/normal = ExtResource( 2 )
Button/styles/pressed = null
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = SubResource( 3 )
Label/styles/normal = null

[sub_resource type="Theme" id=7]
default_font = SubResource( 5 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 1 )
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = ExtResource( 1 )
Button/styles/normal = ExtResource( 2 )
Button/styles/pressed = null
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = null

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 8 )
script = ExtResource( 9 )
__meta__ = {
"_edit_horizontal_guides_": [ 750.307 ],
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.592157, 0.592157, 0.592157, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureShading" type="TextureRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_left = 960.0
margin_top = 540.0
margin_right = 1000.0
margin_bottom = 580.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -400.0
margin_right = 500.0
margin_bottom = 400.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Opciones" type="Label" parent="Control"]
margin_left = -288.0
margin_top = -277.0
margin_right = 362.0
margin_bottom = -208.0
text = "Opciones"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Control"]
margin_left = -288.0
margin_top = -226.0
margin_right = 362.0
margin_bottom = -222.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -308.0
margin_top = -228.0
margin_right = 192.0
margin_bottom = 268.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 5
size_flags_vertical = 5
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resolution" type="Label" parent="Control/VBoxContainer"]
margin_right = 500.0
margin_bottom = 69.0
text = "Resolucion"

[node name="FullScreen" type="CheckBox" parent="Control/VBoxContainer"]
margin_top = 99.0
margin_right = 500.0
margin_bottom = 131.0
text = "Pantalla completa"
flat = true
align = 1

[node name="HSeparator3" type="HSeparator" parent="Control/VBoxContainer"]
margin_top = 161.0
margin_right = 500.0
margin_bottom = 165.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GeneralVolume" type="Label" parent="Control/VBoxContainer"]
margin_top = 195.0
margin_right = 500.0
margin_bottom = 264.0
text = "General"

[node name="MusicVolume" type="Label" parent="Control/VBoxContainer"]
margin_top = 294.0
margin_right = 500.0
margin_bottom = 363.0
text = "Musica"

[node name="SoundVolume" type="Label" parent="Control/VBoxContainer"]
margin_top = 393.0
margin_right = 500.0
margin_bottom = 462.0
text = "SFX"

[node name="HSeparator2" type="HSeparator" parent="Control/VBoxContainer"]
margin_top = 492.0
margin_right = 500.0
margin_bottom = 496.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" parent="Control" instance=ExtResource( 6 )]
margin_left = -212.011
margin_top = 292.858
margin_right = 187.989
margin_bottom = 392.858
rect_scale = Vector2( 1.2, 1.2 )
text = "Menu Principal  "

[node name="OptionButton" type="OptionButton" parent="Control"]
margin_left = 94.0
margin_top = -214.638
margin_right = 391.0
margin_bottom = -154.638
text = "Resolucion"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlusGeneral" type="Button" parent="Control"]
margin_left = -7.7713
margin_top = -25.0026
margin_right = 69.2287
margin_bottom = 47.9974
custom_fonts/font = SubResource( 8 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValueGeneral" type="Label" parent="Control"]
margin_left = 83.7196
margin_top = -13.2178
margin_right = 144.72
margin_bottom = 55.7822
text = "5"
align = 1
valign = 2

[node name="MinusGeneral" type="Button" parent="Control"]
margin_left = 155.079
margin_top = -25.0026
margin_right = 232.079
margin_bottom = 47.9974
custom_fonts/font = SubResource( 8 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlusMusic" type="Button" parent="Control"]
margin_left = -7.7713
margin_top = 75.1105
margin_right = 69.2287
margin_bottom = 148.11
custom_fonts/font = SubResource( 8 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValueMusic" type="Label" parent="Control"]
margin_left = 83.7196
margin_top = 86.8952
margin_right = 144.72
margin_bottom = 155.895
text = "5"
align = 1
valign = 2

[node name="MinusMusic" type="Button" parent="Control"]
margin_left = 155.079
margin_top = 75.1105
margin_right = 232.079
margin_bottom = 148.11
custom_fonts/font = SubResource( 8 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlusSFX" type="Button" parent="Control"]
margin_left = -7.7713
margin_top = 174.891
margin_right = 69.2287
margin_bottom = 247.891
custom_fonts/font = SubResource( 8 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValueSFX" type="Label" parent="Control"]
margin_left = 83.7196
margin_top = 186.676
margin_right = 144.72
margin_bottom = 255.676
text = "5"
align = 1
valign = 2

[node name="MinusSFX" type="Button" parent="Control"]
margin_left = 155.079
margin_top = 174.891
margin_right = 232.079
margin_bottom = 247.891
custom_fonts/font = SubResource( 8 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="."]
visible = false
margin_left = 1705.74
margin_top = 1042.51
margin_right = 1915.74
margin_bottom = 1070.51
theme = SubResource( 6 )
text = "Version: 0.2.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = 113.0
margin_top = 82.4801
margin_right = 1197.0
margin_bottom = 216.48
theme = SubResource( 7 )
custom_colors/font_outline_modulate = Color( 0.231373, 0.913725, 1, 1 )
text = "Bullet Rain"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXTest" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
bus = "SFX"
[connection signal="toggled" from="Control/VBoxContainer/FullScreen" to="." method="_on_FullScreen_toggled"]
[connection signal="item_selected" from="Control/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="Control/PlusGeneral" to="." method="_on_PlusGeneral_pressed"]
[connection signal="pressed" from="Control/MinusGeneral" to="." method="_on_MinusGeneral_pressed"]
[connection signal="button_up" from="Control/PlusMusic" to="." method="_on_PlusMusic_button_up"]
[connection signal="pressed" from="Control/MinusMusic" to="." method="_on_MinusMusic_pressed"]
[connection signal="button_up" from="Control/PlusSFX" to="." method="_on_PlusSFX_button_up"]
[connection signal="button_down" from="Control/MinusSFX" to="." method="_on_MinusSFX_button_down"]
